# dotimate

./: README.md  a.dot  b.dot  c.dot  dotimate.cabal
src/main/: Main.hs
