Name:                dotimate

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.1

Synopsis:            Generate movie frames between multiple .dot graphs.

-- A longer description of the package.
Description:         Given a set of .dot files, dotimate will use neato
                     to generate a set of frames between adding and
                     removing nodes from one .dot graph to the next.
Homepage:            https://github.com/bneijt/dotimate
License:             GPL-3
License-file:        LICENSE
Author:              Bram Neijt
Maintainer:          bneijt@gmail.com
Category:            Animation

Build-type:          Simple
Extra-source-files:  README.md
Cabal-version:       >=1.2


Executable dotimate
    Main-is:             src/main/Main.hs

    -- Packages needed in order to build this package.
    Build-depends:  base, process, regex-compat, regex-posix, graphviz >=2999.13.0.2, text, directory
  
